tests/fixtures/invalid/pow_list_none_list.py
# Cannot call pow() with List[int], None, List[int]
x = pow([1, 2, 3], None, [1, 2, 3])
